<resources>
    <string name="app_name">iVisitor</string>
    <string name="login">LOGIN</string>
    <string name="username">USERNAME :</string>
    <string name="password">PASSWORD :</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="click_here_to_register">CLICK HERE TO SIGN UP</string>
    <string name="re_password">RE-PASSWORD</string>
    <string name="register">REGISTER</string>
    <string name="dashboard_calendar">CALENDAR</string>
    <string name="dashboard_notification">NOTIFICATION</string>
    <string name="dashboard_appointment">APPOINTMENT</string>
    <string name="dashboard_edit_profile">EDIT PROFILE</string>
    <string name="dashboard__menu_logout">LOGOUT</string>
    <string name="dashboard_history">HISTORY</string>
    <string name="edit_profile_firstname">Firstname</string>
</resources>
