<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".dashboardActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:cardElevation="0dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/dashboard_header_background" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintWidth_percent="0.4"
        android:layout_height="0dp"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintVertical_bias="0.35"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatImageView
                style="@style/dashboard_menu_image"
                android:src="@drawable/ic_date_range_96dp">
            </androidx.appcompat.widget.AppCompatImageView>
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/dasboard_menu_text"
                android:text="@string/dashboard_calendar"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="0dp"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintWidth_percent="0.4"
        android:layout_height="0dp"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintVertical_bias="0.35"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout style="@style/dashboard_menu_item">
            <androidx.appcompat.widget.AppCompatImageView
                style="@style/dashboard_menu_image"
                android:src="@drawable/ic_message_96dp">
            </androidx.appcompat.widget.AppCompatImageView>
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/dasboard_menu_text"
                android:text="@string/dashboard_notification"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="0dp"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintWidth_percent="0.4"
        android:layout_height="0dp"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintVertical_bias="0.65"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
        <LinearLayout style="@style/dashboard_menu_item">
            <androidx.appcompat.widget.AppCompatImageView
                style="@style/dashboard_menu_image"
                android:src="@drawable/ic_event_note_96dp">
            </androidx.appcompat.widget.AppCompatImageView>
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/dasboard_menu_text"
                android:text="@string/dashboard_appointment"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="0dp"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintWidth_percent="0.4"
        android:layout_height="0dp"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintVertical_bias="0.65"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout style="@style/dashboard_menu_item">
            <androidx.appcompat.widget.AppCompatImageView
                style="@style/dashboard_menu_image"
                android:src="@drawable/ic_mode_96dp">
            </androidx.appcompat.widget.AppCompatImageView>
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/dasboard_menu_text"
                android:text="@string/dashboard_edit_profile"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>